--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,66 @@
+*{
+    box-sizing: border-box;
+}
+
 body{
     background-color: black;
+    margin: 0;
+    padding: 0;
+    overflow: none;
+    height: 100vh;
+}
+
+nav{
+    position: fixed;
+    z-index: 2;
+}
+
+#content{
+    overflow: hidden;
+}
+
+.home-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.home-container h1{
+    position: absolute;
+    z-index: 1;
+    color: white;
+    font-size: 2.5rem;
+}
+
+.home-img{
+    opacity: 0.6;
+    object-fit: cover;
+    object-position: center center;
+    margin: 0;
+    padding: 0;
+}
+
+.home-content{
+    height: 500px;
+    width: 100vw;
+
+    display: flex;
+    background-color: rgb(10, 10, 10);
+}
+
+.full-img{
+    height: 100vh;
+    width: 100vw;
+}
+
+.half-img{
+    height: 50vh;
+    width: 100vw;
+}
+
+.footer{
+    height: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
