--- a/src/styles.css
+++ b/src/styles.css
@@ -3,7 +3,8 @@
 }
 
 :root{
-    --text-color: rgb(242, 239, 239);
+    --text-color: rgb(237, 231, 231);
+    --text-hover-color : white;
 }
 
 body{
@@ -14,9 +15,46 @@ body{
     height: 100vh;
 }
 
+h1{
+    padding: 0;
+    margin: 0;
+}
+
 nav{
     position: fixed;
     z-index: 2;
+    width: 100%;
+    padding: 20px;
+    display: flex;
+    justify-content: space-between;
+    background-color: rgba(0, 0, 0, 0.904);
+}
+
+nav div{
+    display: flex;
+    gap: 20px;
+}
+
+#title{
+    font-size: 1.5rem;
+    border: none;
+}
+
+button{
+    background: none;
+    border: none;
+
+    color: var(--text-color);
+    font-size: 1.2rem;
+    cursor: pointer;
+    border: 2px solid var(--text-color);
+    border-radius: 5px;
+    padding: 5px 20px;
+}
+
+button:hover{
+    color: var(--text-hover-color);
+    border: 2px solid var(--text-hover-color);
 }
 
 #content{
@@ -37,19 +75,11 @@ nav{
 }
 
 .home-img{
-    opacity: 0.6;
+    opacity: 0.4;
     object-fit: cover;
     object-position: center center;
     margin: 0;
     padding: 0;
-}
-
-.home-content{
-    height: 500px;
-    width: 100vw;
-
-    display: flex;
-    background-color: rgb(10, 10, 10);
 }
 
 .full-img{
