--- a/src/styles.css
+++ b/src/styles.css
@@ -1,102 +1,129 @@
-*{
-    box-sizing: border-box;
+* {
+  box-sizing: border-box;
 }
 
-:root{
-    --text-color: rgb(237, 231, 231);
-    --text-hover-color : white;
+:root {
+  --text-color: rgb(237, 231, 231);
+  --text-hover-color: white;
+
+  --footer-height: 80px;
 }
 
-body{
-    background-color: black;
-    margin: 0;
-    padding: 0;
-    overflow: none;
-    height: 100vh;
+body {
+  background-color: black;
+  margin: 0;
+  padding: 0;
+  overflow: none;
+  height: 100vh;
 }
 
-h1{
-    padding: 0;
-    margin: 0;
+img {
+  user-drag: none;
+  -webkit-user-drag: none;
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
 }
 
-nav{
-    position: fixed;
-    z-index: 2;
-    width: 100%;
-    padding: 20px;
-    display: flex;
-    justify-content: space-between;
-    background-color: rgba(0, 0, 0, 0.904);
+h1 {
+  padding: 0;
+  margin: 0;
+  text-align: center;
 }
 
-nav div{
-    display: flex;
-    gap: 20px;
+nav {
+  position: fixed;
+  z-index: 2;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.904);
+
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  padding: 20px;
 }
 
-#title{
-    font-size: 1.5rem;
-    border: none;
+nav div {
+  display: flex;
+  gap: 20px;
 }
 
-button{
-    background: none;
-    border: none;
-
-    color: var(--text-color);
-    font-size: 1.2rem;
-    cursor: pointer;
-    border: 2px solid var(--text-color);
-    border-radius: 5px;
-    padding: 5px 20px;
+#title {
+  font-size: 1.5rem;
+  outline: none;
 }
 
-button:hover{
-    color: var(--text-hover-color);
-    border: 2px solid var(--text-hover-color);
+button {
+  background: none;
+  border: none;
+
+  color: var(--text-color);
+  font-size: 1.2rem;
+  cursor: pointer;
+  border: none;
+  outline: 1px solid var(--text-color);
+  border-radius: 5px;
+  padding: 5px 20px;
 }
 
-#content{
-    overflow: hidden;
+button:hover {
+  color: var(--text-hover-color);
+  outline: 2px solid var(--text-hover-color);
 }
 
-.home-container{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+#content {
+  overflow: hidden;
 }
 
-.home-container h1{
-    position: absolute;
-    z-index: 1;
-    color: var(--text-color);
-    font-size: 2.5rem;
+.home-container, .booking-container{
+  opacity: 0%;
+  transition: opacity 0.5s;
 }
 
-.home-img{
-    opacity: 0.4;
-    object-fit: cover;
-    object-position: center center;
-    margin: 0;
-    padding: 0;
+.home-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.full-img{
-    height: 100vh;
-    width: 100vw;
+.home-container h1 {
+  position: absolute;
+  z-index: 1;
+  color: var(--text-color);
+  font-size: 2.5rem;
 }
 
-.half-img{
-    height: 50vh;
-    width: 100vw;
+.home-img {
+  width: 100vw;
+  opacity: 0.4;
+  object-fit: cover;
+  object-position: center center;
+  height: calc(100vh - var(--footer-height));
 }
 
-.footer{
-    height: 80px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
-    color: var(--text-color);
+.full-img {
+}
+
+.half-img {
+  height: 50vh;
+  width: 100vw;
+}
+
+.footer {
+  height: var(--footer-height);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  color: var(--text-color);
+}
+
+
+@media screen and (max-width:500px) {
+  
+  nav{
+
+  justify-content: center;
+  }
 }
